Closed Bug 1094816 Opened 10 years ago Closed 10 years ago

MediaDeviceErrorCallback::OnError leaks the argument error

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
2.1 S8 (7Nov)

People

(Reporter: aosmond, Assigned: aosmond)

Details

Attachments

(1 file)

In dom/media/MediaPermissionGonk.cpp:

> MediaDeviceErrorCallback::OnError(nsISupports* aError)
> {
>   MediaStreamError *error = nullptr;
>   nsresult rv = CallQueryInterface(aError, &error);

Ref created for error is never released.
Attachment #8518157 - Flags: review?(rjesup)
Attachment #8518157 - Flags: review?(rjesup) → review+
Keywords: checkin-needed
Target Milestone: --- → 2.1 S8 (7Nov)
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: