Bug 1094816 - Fix a memory leak in MediaDeviceErrorCallback r=jesup